# 720-pbft-visualization

./: .env  .gitconfig  .gitignore  README.md  json_events.txt  live  log.json  package-lock.json  setup.sh  sse-live-from-log.js  teardown.sh  types_messages.txt
api/: main.py  requirements.txt
codes/: deploy_json_demo.sh  wandlr.cpp
cpp-producer/: CMakeLists.txt  Makefile  README.md  producer.cpp
frontend/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  state.ts  styles.css  types.ts
frontend/src/components/: CanvasPanel.tsx  DownBar.tsx  Sidebar.tsx  Sidebar2.tsx  TopBar.tsx
frontend/src/hooks/: useCanvasRenderer.ts  (+1 more)
my-app/: README.md  package-lock.json  package.json
my-app/src/: App.js  Text.js  data.json  index.js  simpleData.json
redpanda-broker/: docker-compose.yml
remote-files/: client-pbft.txt  replica-pbft.txt  servers.current.data  servers.data  servers4.data  wandlr  wandlr.cpp  wandlr_fixed
remote-files/configs/: pbft-client-1.txt  pbft-client-2.txt  pbft-client-3.txt  pbft-client-4.txt  pbft-client-5.txt  pbft-replica-1.txt  pbft-replica-10.txt  pbft-replica-2.txt  pbft-replica-3.txt  pbft-replica-4.txt  pbft-replica-5.txt  pbft-replica-6.txt  pbft-replica-7.txt  pbft-replica-8.txt  pbft-replica-9.txt
scripts/: deploy_pbft.sh  kill_pbft.sh  make_servers_current.sh  reconfigure_pbft.sh  setup_pbft.sh  ssh_hello.py  ssh_pbft_send.py
simulator/: package.json  sim_server.js
testing-tools/: kill-replica.sh  revive-replica.sh
ui/: index.html  package.json
